Bug 91405 - multimonitor VM keeps resizing after connection
Summary: multimonitor VM keeps resizing after connection
Status: RESOLVED FIXED
Alias: None
Product: Spice
Classification: Unclassified
Component: virt-viewer (show other bugs)
Version: unspecified
Hardware: Other Linux (All)
: medium normal
Assignee: Spice Bug List
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-07-20 15:12 UTC by Pavel Grunt
Modified: 2015-07-29 15:19 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
screencast of the problem (1.71 MB, video/ogg)
2015-07-20 15:19 UTC, Pavel Grunt
Details
debug log (411.97 KB, text/plain)
2015-07-20 15:19 UTC, Pavel Grunt
Details
debug log gtk2 (36.89 KB, text/plain)
2015-07-20 15:22 UTC, Pavel Grunt
Details

Description Pavel Grunt 2015-07-20 15:12:05 UTC
When I connect to a RHEL6.7 VM running locally, it keeps resizing for a while.

upstream versions of all the components
Fedora 23 Xfce (rawhide) as a host & client
spice-gtk v0.29
virt-viewer (gtk3) 2.0

Steps to reproduce:
1. configure the VM to have two monitors (2x 800x600)
2. connect to the VM

Additional info:
I could not reproduce the issue in gnome shell or with gtk2 version.
Comment 1 Pavel Grunt 2015-07-20 15:19:20 UTC
Created attachment 117258 [details]
screencast of the problem
Comment 2 Pavel Grunt 2015-07-20 15:19:58 UTC
Created attachment 117260 [details]
debug log
Comment 3 Pavel Grunt 2015-07-20 15:22:23 UTC
Created attachment 117261 [details]
debug log gtk2
Comment 4 Jonathon Jongsma 2015-07-20 15:36:08 UTC
(In reply to Pavel Grunt from comment #2)
> Created attachment 117260 [details]
> debug log

Very strange. I see that the client is sending down a 1x1 monitor size to the guest, which is presumably smaller than the minimum monitor size.

Can you reproduce this 100% with the given setup?
Comment 5 Pavel Grunt 2015-07-20 15:42:53 UTC
(In reply to Jonathon Jongsma from comment #4)
> (In reply to Pavel Grunt from comment #2)
> > Created attachment 117260 [details]
> > debug log
> 
> Very strange. I see that the client is sending down a 1x1 monitor size to
> the guest, which is presumably smaller than the minimum monitor size.
> 
> Can you reproduce this 100% with the given setup?

100% reproducible on Xfce, cannot reproduce it remotely
Comment 6 Pavel Grunt 2015-07-23 14:57:10 UTC
Patch was posted: https://www.redhat.com/archives/virt-tools-list/2015-July/msg00114.html


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.