Show window after its default and preferred sizes are set

Under some circumstances (Xfce desktop environment, gtk3 client,  RHEL6
guest having two monitors running locally) it is possible to create
a loop of resizing windows. It is caused by size request like 1x1 sent
to the guest. These request are created because _window_queue_resize()
is called when the window is being shown.
To avoid the problem, call gtk_widget_show() after its preferred and
default sizes are set.

Resolves:
https://bugs.freedesktop.org/show_bug.cgi?id=91405