src/virt-viewer-window.c
@@ -1343,12 +1343,12 @@ virt_viewer_window_show(VirtViewerWindow *self)
     if (self->priv->display)
         virt_viewer_display_set_enabled(self->priv->display, TRUE);
 
-    gtk_widget_show(self->priv->window);
-
     if (self->priv->desktop_resize_pending) {
         virt_viewer_window_queue_resize(self);
         self->priv->desktop_resize_pending = FALSE;
     }
+
+    gtk_widget_show(self->priv->window);
 
     if (self->priv->kiosk)
         virt_viewer_window_enable_kiosk(self);
